Fix tokensale banner on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2654,4 +2654,7 @@ Media Queries
   .tokensale-headline {
     font-size: 32px;
   }
+  .tokensale-banner .lead {
+    font-size: 14px;
+  }
 }
